# Footyquant

./: .gitignore  finalize.py  pipeline.py
data/: WorldCup2026.xlsx  auto-updating-schedule.xlsx  kalshi_event_map.json  polymarket_event_map.json
footyquant/: __main__.py  clean_modeling.py  clean_odds.py  clv.py  collector.py  db.py  import_xlsx.py  kalshi.py  load_reference.py  oddspapi.py  polymarket.py  polymarket_collector.py  propagate_knockout_results.py  propagate_results.py  rebuild_clean_market_odds.py  rebuild_clean_modeling_tables.py  restore_match_outcome.py  scrape_fotmob_stats.py  team_mapping.py  update_bracket.py  update_knockout_fixtures.py  update_wc2026_matches.py
footyquant/audit/: data_audit.py
footyquant/automation/: run_pipeline.py
footyquant/modelling/: model.py
frontend-tui/: Cargo.toml
frontend-tui/src/: api.rs  app.rs  ascii_art.rs  bracket.rs  flags.rs  lib.rs  main.rs  market_engine.rs  models.rs  splash_data.rs  theme.rs  timeline.rs
frontend-tui/src/api/: fireworks.rs
frontend-tui/src/views/: match_detail.rs  match_list.rs  mod.rs  model_stats.rs  splash.rs
frontend-tui/src/widgets/: mod.rs  prob_display.rs  scoreline_grid.rs  team_compare.rs
tests/: test_clean_modeling.py  test_clean_odds.py  test_codebase_cleanup.py  test_xg_model.py
