[package]
name = "matchday"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
ratatui-image = { version = "11.0.6", default-features = false, features = ["crossterm", "image-defaults"] }
image = "0.25"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
